# yawt

./: .gitignore  AGENTS.md  CENTERLINE_REWRITE_PLAN.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  ROADMAP.md  START_END_REIMPLEMENTATION_GUIDE.md  TODO.md  annotationtablemodel.cpp  blobtablemodel.cpp  blobtablemodel.h  build_and_deploy.sh  colordelegate.cpp  colordelegate.h  comments.txt  deploy_simple_working.sh  frameloader_internal.cpp  frameloader_internal.h  info.plist  itemtypedelegate.cpp  itemtypedelegate.h  main.cpp  mainwindow copy.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mergeviewer.cpp  miniloader.cpp  miniloader.h  minivideoloader.cpp  minivideoloader.h  qtbuildtool.sh  resources.qrc  retrackingdialog.cpp  retrackingdialog.h  retrackingdialog.ui  retrackingprocessor.cpp  (+34 more)
.cache/clangd/index/: blobtablemodel.cpp.2A2EB5671CE78ADD.idx  blobtablemodel.h.4A1F2B212A758347.idx  colordelegate.cpp.DA4F0EB4D1A9AE04.idx  colordelegate.h.F2CBA38F34AAC79B.idx  folderfirstsortproxymodel.cpp.BD9F21E19CE050B8.idx  folderfirstsortproxymodel.h.2FC33AA80D8DA153.idx  itemtypedelegate.cpp.8D89DF5D5213047D.idx  itemtypedelegate.h.B9D2BD005EAA3DC1.idx  main.cpp.6E1B755C9B6C7140.idx  mainwindow.cpp.70566A3415369118.idx  mainwindow.h.7E40A3B7AA38B8E1.idx  trackingcommon.cpp.9AE2A3D2A23D87EC.idx  trackingcommon.h.3ADA3C5B5E62A671.idx  trackingmanager.cpp.AF5BF4CBC94E4E29.idx  trackingmanager.h.8A763A69B5031D08.idx  trackingprogressdialog.cpp.7A265B0054E258E6.idx  trackingprogressdialog.h.34BEBC912452D61E.idx  ui_mainwindow.h.B2B5AAAE8C2529FF.idx  ui_trackingprogressdialog.h.59D6D0B9A410345C.idx  videofiletreeview.cpp.21CC20A83CF91C7F.idx  videofiletreeview.h.DA7963EA8246C926.idx  videoloader.cpp.868A4FE76586F225.idx  videoloader.h.D524A94CD16A4E5C.idx  videoprocessor.cpp.5190A87503B4D2B8.idx  videoprocessor.h.126D15BCA5A9BE9A.idx  wormobject.cpp.8AABF7020FC1F5A1.idx  wormobject.h.0A8EE6F13F08558C.idx  wormtracker.cpp.13FF676201C98045.idx  wormtracker.h.CFBFCF7843B1782A.idx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
.zed/: debug.json  scratchpad  tasks.json
docs/: plugin_reference.md
plugins/: aspect_ratio.json  aspect_ratio.yaml  body_area.json  body_area.yaml  body_length.json  body_length.yaml  chemotaxis_index.json  chemotaxis_index.yaml  distance_from_start_timeline.json  distance_from_start_timeline.yaml  head_tail_flip_timeline.yaml  reversals.json  reversals.yaml  speed.json  speed.yaml  speed_box.json  speed_from_xy.json  speed_from_xy.yaml  speed_timeline.json  speed_timeline.yaml  speed_xy_box.json  total_distance.json  total_distance.yaml
resources/: icon.icns  points.afdesign  timeline.afdesign  trax_alt-arrow.afdesign
scripts/: create_self_signed_cert.sh  deploy_simple_working.sh  package_mac.sh  package_windows_msvc.cmd  plot_yawt_output_metrics.m  sign_with_developer_id.sh  windows_terminal.cmd  zed_build_debug.sh  zed_launch.sh
src/core/: appcontroller.cpp  appcontroller.h  centerlinegeometry.cpp  centerlinegeometry.h  centerlineprocessor.cpp  centerlineprocessor.h  centerlinetypes.h  centerlineworker.cpp  centerlineworker.h  trackingmanager.cpp  trackingmanager.h  wormtracker.cpp  wormtracker.h
src/core/processing/: frameloader_internal.cpp  frameloader_internal.h  videoprocessor.cpp  videoprocessor.h
src/data/: trackingcommon.cpp  trackingcommon.h  trackingdatastorage.cpp  trackingdatastorage.h  videometadatastore.cpp  videometadatastore.h  wormobject.cpp
src/debug/: debugdatastore.cpp  debugdatastore.h  debugexporter.cpp  debugexporter.h  debugrecords.h
src/gui/: analysisdialog.cpp  analysisdialog.h  analysisgroupwidgets.cpp  analysisgroupwidgets.h  analysispanel.cpp  analysispanel.h  analysissessionmodel.cpp  analysissessionmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotcolors.h  plotpainting.cpp  plotpainting.h  scaledialog.cpp  scaledialog.h  trackingprogressdialog.cpp  trackingprogressdialog.h  trackingprogressdialog.ui
src/gui/delegates/: colordelegate.cpp  itemtypedelegate.cpp
src/gui/widgets/: cachestatuswidget.cpp  cachestatuswidget.h  cameraenumerator.cpp  cameraenumerator.h  capturepanel.cpp  capturepanel.h  captureworker.cpp  captureworker.h  frameloader.cpp  frameloader.h  icamerasource.h  liveview.cpp  liveview.h  mergeviewer.cpp  mergeviewer.h  miniloader.cpp  miniloader.h  opencvcamerasource.cpp  opencvcamerasource.h  pyloncamerasource.cpp  pyloncamerasource.h  videofiletreeview.cpp  videofiletreeview.h  videoloader.cpp  videoloader.h  wormtimeline.cpp  wormtimeline.h
src/models/: annotationtablemodel.cpp  annotationtablemodel.h  blobtablemodel.cpp  blobtablemodel.h  folderfirstsortproxymodel.cpp  folderfirstsortproxymodel.h  itemtypefilterproxymodel.cpp  itemtypefilterproxymodel.h
src/plugins/: expreval.cpp  expreval.h  plotpluginspec.h  pluginengine.cpp  pluginengine.h  pluginloader.cpp  pluginloader.h  pluginplotwidget.cpp  pluginplotwidget.h
src/utils/: cvimageutils.cpp  cvimageutils.h  debugutils.cpp  debugutils.h  loggingcategories.h  thresholdingutils.cpp  thresholdingutils.h  yawtjsonio.cpp  yawtjsonio.h  yawtpaths.cpp  yawtpaths.h
tracking/: trackeditemdata.h  trackingcommon.cpp  trackingcommon.h  trackingmanager.cpp  trackingmanager.h  wormobject.h  wormtracker.cpp  wormtracker.h
utilities/: folderfirstsortproxymodel.h  itemtypedelegate.h  videoprocessor.h  wormtablemodel.cpp  wormtablemodel.h
widgets/: trackingprogressdialog.h  videoloader.cpp  videoloader.h
